--- a/app/asset/css/main.css
+++ b/app/asset/css/main.css
@@ -35,6 +35,9 @@ body {
     margin: 5px;
     width: 300px;
     border: 1px solid #ccc;
+    /*position: relative;*/
+    /*display: inline-block;*/
+    /*border-bottom: 1px dotted black;*/
 }
 
 .h3-title{
@@ -131,7 +134,47 @@ a.nav:hover{
 }
 /*------------------END-FORM_DATA---------------------*/
 
+/*------------------DETAILS---------------------*/
+/*.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+}
 
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -60px;
+    opacity: 0;
+    transition: opacity 1s;
+}
+
+.tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+}
+*/
+/*------------------END-DETAILS---------------------*/
 @media screen and (max-width : 992px){
 
 }
