--- a/app/views/users/edit/edit-vegetable-form.template.html
+++ b/app/views/users/edit/edit-vegetable-form.template.html
@@ -181,7 +181,7 @@
 					<tr>
 						<td>Tỉnh/Thành phố(*): </td>
 						<td>
-							<select class="select-box" name="tinh" required ng-model= "$parent.data.tinh" ng-change="cityChange()">
+							<select class="select-box" name="tinh" required ng-model= "$parent.data.tinh" ng-click="cityChange()">
 								<option ng-repeat="(key, city) in cities" value="{{key}}">{{city.type +" " + city.name}}</option>
 							</select>
 						</td>
@@ -189,7 +189,7 @@
 					<tr>
 						<td>Huyện(*):</td>
 						<td>
-							<select class="select-box" name="huyen" required ng-model= "$parent.data.huyen" ng-change="districtChange()">
+							<select class="select-box" name="huyen" required ng-model= "$parent.data.huyen" ng-click="districtChange()">
 								<option ng-repeat="(key, district) in districts | customCity: data.tinh" value="{{key}}">{{district.type + " " + district.name}}</option>
 							</select>
 						</td>
