--- a/views/config.ejs
+++ b/views/config.ejs
@@ -8,6 +8,10 @@
 		}
 		</style>
 	<% include header %>
+	<script src="/javascripts/jtip.js"></script>
+	<style type="text/css" media="all">
+	@import "/stylesheets/global.css";
+	</style>
 	</head>
 	
 	<body>
@@ -161,7 +165,7 @@
 															<% for (var j = 0; j < roles.length; j++) { %>
 																<li class="list-group-item">
 																	<input name="<%= roles[j].role%>" type="checkbox" <%= (users[i].id in aclRules && aclRules[users[i].id].indexOf(roles[j].role) > -1) ? 'checked' : '' %> > </input>
-																	<span> <%= roles[j].rolename %> </span>
+																	<span> <a href="/config/roleTooltip?width=500&amp;role=<%= roles[j].role %>&amp;link=#" name="Các quyền" id="jTip-<%= roles[j].rolename + i %>" class="jTip"><%= roles[j].rolename %></a> </span>
 																</li>
 															<% } %>
 														</ul>
