--- a/views/manager/users.ejs
+++ b/views/manager/users.ejs
@@ -183,7 +183,7 @@
 										<td><%= u.fullname %></td>
 										<td><span class="<%= u.level.class %>" title="<%= u.maDeTai %>"><%= u.level.name %></span></td>
 										<% var date = new Date(u.lastLogin) %>
-										<td><%= [date.getDate(), date.getMonth() + 1, date.getFullYear()].join('/') + ', ' + [date.getHours(), date.getMinutes(), date.getSeconds()].join(':') %></td>
+										<td><%= (date != 'Invalid Date') ? [date.getDate(), date.getMonth() + 1, date.getFullYear()].join('/') + ', ' + [date.getHours(), date.getMinutes(), date.getSeconds()].join(':') : '' %></td>
 										<% if (u.level.name == 'Pending User') { %>
 											<td><button type="button" class="btn btn-block btn-success" onclick="assignTo('<%= u._id %>')">Assign to my team</button>
 											</td>
