--- a/app/views/guest/test.template.html
+++ b/app/views/guest/test.template.html
@@ -1,5 +1,10 @@
-<div style="margin-top: 60px;" bs-loading-overlay bs-loading-overlay-delay="200">
-  <input type='file' ng-model="input_file" ng-change="openFile(event)"><br>
-  <div id='output'></div>
+<div class="container" style="margin-top: 60px;" bs-loading-overlay bs-loading-overlay-delay="200">
+<script src="/javascripts/FileSaver.js"></script>
+	<div>
+  		<input type="file" multiple ng-model="testfile" class="inputfile customfile" data-multiple-caption="{count} file is selected" id="testfile" name ="testfile">
+		<label for="testfile" title="{{tooltips['testfile']}}"><span>No file chosen</span><strong>Open</strong></label>
+	</div>
+	<button type="button" data-id="/content/dong-vat/59153670d01e41313c837dc9?display=docx" ng-click="download()" class="btn btn-default">Dowload</button>
   <div ng-bind="counter"></div>
 </div>
+<script type="text/javascript" src="asset/js/buttonfile/custom-file-input.js"></script>
