--- a/app/views/modals/exportfile.blade.html
+++ b/app/views/modals/exportfile.blade.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
   <!-- <h4>Chọn những trường cần trích xuất: </h4> -->
-  <h4>Trích xuất những file đã chọn? </h4>
+  <h4>Lựa chọn những trường cần trích xuất: </h4>
 </div>
 <div class="modal-body">
 	<input type="text" title="{{tooltips['fields']}}" name="fields" class="input-form flexdatalist-force" data-min-length='0' multiple='multiple' ng-model="data.fields" list="fields">
