--- a/views/display.ejs
+++ b/views/display.ejs
@@ -80,18 +80,10 @@
 						if (!(prop in obj1) && (prop in obj2)){
 							return true;
 						}
-
 						return diff(obj1[prop], obj2[prop]);
 					}
 					catch (e){
 						console.log(e);
-						console.log('+++')
-						console.log(prop);
-						console.log('+++')
-						console.log(obj1[prop]);
-						console.log('+++')
-						console.log(obj2[prop]);
-						console.log('+++')
 						return false;
 					}
 
@@ -124,7 +116,7 @@
 						return false;
 					}
 					if ((prop1 instanceof Date) && (prop2 instanceof Date)){
-						return (prop1 - prop2 == 0);
+						return !(prop1 - prop2 == 0);
 					}
 					if ((typeof(prop1) == typeof(prop2)) && (typeof(prop1) == 'object')){
 						if (Object.keys(prop1).length != Object.keys(prop2).length){
@@ -146,24 +138,19 @@
 				}
 				var diffs = [];
 				var obj1 = obj1;
-				// console.log(obj1);
 				var obj2 = obj2;
-				// console.log('doSau' in obj1);
-				// console.log('doSau' in obj2);
-				// console.log(obj2);
 					if (count == 2){
-						console.log(count);
-						// console.log(obj1);
+						// console.log(count);
 						for(var i in obj1){
-							console.log("processing " + i);
+							// console.log("processing " + i);
 							if (propDiff(obj1, obj2, i)){
-								console.log("pushing " + i);
+								// console.log("pushing " + i);
 								diffs.push(i);
 							}
 						}
-						console.log("===")
+						// console.log("===")
 						// console.log(count);
-						console.log(obj2);
+						// console.log(obj2);
 						for(var i in obj2){
 							if (diffs.indexOf(i) < 0){
 								if (propDiff(obj1, obj2, i)){
