--- a/templates/header.html
+++ b/templates/header.html
@@ -10,6 +10,10 @@
 		body {
 			font-family: "Times New Roman";
 			font-size: 16px;
+			padding-left: 5px;
+			padding-right: 5px;
+			padding-top: 5px;
+			padding-bottom: 5px;
 		}
 		p {
 			margin: 0px;
@@ -27,7 +31,7 @@
 		}
 		table {
 			margin: 20px 20px 20px 20px;
-			width: 100%;
+			width: 90%;
 		}
 		th {
 			width: 25%;
